<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"
            android:text="@string/report_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/report_header" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

        <TextView
            style="@style/SpacingBody1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_name" />

        <TextView
            style="@style/SpacingBody2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="48dp"
            android:background="@color/colorDivider" />

        <TextView
            style="@style/SpacingBody1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_systolic" />


        <TextView
            style="@style/SpacingBody2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="48dp"
            android:background="@color/colorDivider" />

        <TextView
            style="@style/SpacingBody1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_diastolic" />

        <TextView
            style="@style/SpacingBody2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="48dp"
            android:background="@color/colorDivider" />

        <TextView
            style="@style/SpacingBody1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_condition" />

        <TextView
            style="@style/SpacingBody2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end" />

    </LinearLayout>

</ScrollView>